--- a/.classpath
+++ b/.classpath
@@ -25,10 +25,11 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-servlet-1.18.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jettison-1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsr311-api-1.1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/redpincore.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/redpincore.jar" sourcepath="/RedpinCore/src"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-1.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/libsvm.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.5-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/sqlite-jdbc-3.6.17.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/postgresql-9.3-1101.jdbc3.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
