added: management pages, map upload

--- a/WebContent/WEB-INF/classes/redpin.properties
+++ b/WebContent/WEB-INF/classes/redpin.properties
@@ -4,3 +4,6 @@ log.level=ALL
 db.type=MYSQL
 db.location=//localhost:3304/redpin?user=root
 db.driver=com.mysql.jdbc.Driver
+
+locator=org.redpin.server.standalone.locator.CustomLocator
+#locator=org.redpin.server.standalone.locator.RedpinLocator
