--- a/src/redpin.properties
+++ b/src/redpin.properties
@@ -4,3 +4,6 @@ log.level=ALL
 db.type=MYSQL
 db.location=//localhost:3304/redpin?user=root
 db.driver=com.mysql.jdbc.Driver
+
+locator=org.redpin.server.standalone.locator.CustomLocator
+#locator=org.redpin.server.standalone.locator.RedpinLocator
